# SPiN26-Demo

./: .gitignore  README.md  main.py  prepare.py  pyproject.toml
config/: main.yaml
data/: sessions.eval.csv
data/manifests/: eval_01.aria.P099.json  eval_01.ha.P099.json  eval_01.ha.P100.json  test_01.aria.P099.json
data/samples/mix/: eval_01.aria.aria.P099.0.mov  eval_01.aria.ct.P099.0.mov
data/transcripts/: eval_01.transcript.P100.json  eval_01.transcript.P102.json  test_01.transcript.P099.json  test_01.transcript.P101.json
