[project]
name = "spin26-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pre-commit>=4.5.1",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "streamlit>=1.52.2",
]
